# ubiq-cpp

./: .gitignore  CMakeLists.txt  Error.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h  main.cpp  todo.md
src/: Error.cpp  Error.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h
tests/: CMakeLists.txt  LexerTest.cpp
